# turbo-quant

./: .gitignore  FINDINGS.md  LICENSE  README.md  benchmark.py  pyproject.toml
docs/: HOW_IT_WORKS.md  REPRODUCING.md  USE_CASES.md
turboquant/: __init__.py  codebook.py  qjl.py  quantizer.py  rotation.py  search.py  storage.py  types.py
