[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant: Near-optimal vector quantization for vector database compression"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
bench = ["matplotlib"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
